--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@google/genai": "^1.38.0",
-    "@google/generative-ai": "^0.24.1",
     "firebase": "^12.8.0",
     "geofire-common": "^6.0.0",
     "react": "^19.2.3",
@@ -18,6 +17,8 @@
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
+    "@types/react": "^19.2.14",
+    "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.0.0",
     "autoprefixer": "^10.4.23",
     "postcss": "^8.5.6",
